--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <style>
         .hero-section {
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://placehold.co/1920x1080/000000/FFFFFF?text=Be+Bold') center/cover no-repeat;
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://res.cloudinary.com/da9jjs21q/image/upload/v1755720844/%D0%A1%D0%BD%D0%B8%D0%BC%D0%BE%D0%BA_%D1%8D%D0%BA%D1%80%D0%B0%D0%BD%D0%B0_2025-08-20_%D0%B2_23.13.14_lx06ni.png') center/cover no-repeat;
             height: 100vh;
             display: flex;
             align-items: center;
@@ -89,13 +89,14 @@
             </div>
         </div>
     </nav>
-
-    <!-- Герой секция -->
+  <!-- Герой секция -->
     <section class="hero-section" id="home">
         <div class="container text-center">
-            <h1 class="display-1 fw-bold mb-4">BE BOLD</h1>
-            <p class="display-6 mb-4">Выставка картин Михаила Якушина</p>
-            <p class="lead mb-5">15 октября — 15 ноября 2023 | Московский музей современного искусства</p>
+            <h1 class="display-1 fw-bold mb-4">Будьте дерзкими!</h1>
+            <p class="display-6 mb-4">Михаил Якушин</p>
+            <p class="lead mb-5">13 — 26 октября 2005 | Арбат 21 </p>
+              
+
             <a href="#exhibition" class="btn btn-outline-light btn-lg px-5">Узнать больше</a>
         </div>
     </section>
@@ -105,7 +106,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 text-center mb-5 mb-lg-0">
-                    <img src="https://placehold.co/500x500/000000/FFFFFF?text=М.Якушин" alt="Михаил Якушин" class="artist-img">
+                    <img src="https://res.cloudinary.com/da9jjs21q/image/upload/v1755720135/%D0%A1%D0%BD%D0%B8%D0%BC%D0%BE%D0%BA_%D1%8D%D0%BA%D1%80%D0%B0%D0%BD%D0%B0_2025-08-20_%D0%B2_23.01.52_nx2sbi.png" alt="Михаил Якушин" class="artist-img">
                 </div>
                 <div class="col-lg-6">
                     <h2 class="mb-4">Михаил Якушин</h2>
@@ -128,7 +129,7 @@
             <div class="row g-4">
                 <div class="col-md-6 col-lg-4">
                     <div class="card shadow-sm">
-                        <img src="https://placehold.co/600x800/000000/FFFFFF?text=Картина+1" class="card-img-top gallery-img" alt="Картина 1">
+                        <img src="https://res.cloudinary.com/da9jjs21q/image/upload/v1755701186/%D0%A1%D0%BD%D0%B8%D0%BC%D0%BE%D0%BA_%D1%8D%D0%BA%D1%80%D0%B0%D0%BD%D0%B0_2025-08-20_%D0%B2_17.45.44_n6xwdh.png" class="card-img-top gallery-img" alt="Картина 1">
                         <div class="card-body">
                             <h5 class="card-title">"Смелость быть"</h5>
                             <p class="card-text">Холст, масло, акрил | 120×90 см | 2022</p>
@@ -137,7 +138,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="card shadow-sm">
-                        <img src="https://placehold.co/600x800/000000/FFFFFF?text=Картина+2" class="card-img-top gallery-img" alt="Картина 2">
+                        <img src="https://res.cloudinary.com/da9jjs21q/image/upload/v1755701186/%D0%A1%D0%BD%D0%B8%D0%BC%D0%BE%D0%BA_%D1%8D%D0%BA%D1%80%D0%B0%D0%BD%D0%B0_2025-08-20_%D0%B2_17.45.34_hurnbo.png" class="card-img-top gallery-img" alt="Картина 2">
                         <div class="card-body">
                             <h5 class="card-title">"Красный импульс"</h5>
                             <p class="card-text">Холст, акрил | 100×100 см | 2023</p>
@@ -146,7 +147,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="card shadow-sm">
-                        <img src="https://placehold.co/600x800/000000/FFFFFF?text=Картина+3" class="card-img-top gallery-img" alt="Картина 3">
+                        <img src="https://res.cloudinary.com/da9jjs21q/image/upload/v1755701186/%D0%A1%D0%BD%D0%B8%D0%BC%D0%BE%D0%BA_%D1%8D%D0%BA%D1%80%D0%B0%D0%BD%D0%B0_2025-08-20_%D0%B2_17.45.53_k4nyop.png" class="card-img-top gallery-img" alt="Картина 3">
                         <div class="card-body">
                             <h5 class="card-title">"Глубина"</h5>
                             <p class="card-text">Холст, масло | 150×120 см | 2021</p>
@@ -155,7 +156,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="card shadow-sm">
-                        <img src="https://placehold.co/600x800/000000/FFFFFF?text=Картина+4" class="card-img-top gallery-img" alt="Картина 4">
+                        <img src="https://res.cloudinary.com/da9jjs21q/image/upload/v1755720644/%D0%A1%D0%BD%D0%B8%D0%BC%D0%BE%D0%BA_%D1%8D%D0%BA%D1%80%D0%B0%D0%BD%D0%B0_2025-08-20_%D0%B2_23.10.26_wcivfu.png" class="card-img-top gallery-img" alt="Картина 4">
                         <div class="card-body">
                             <h5 class="card-title">"Вихрь"</h5>
                             <p class="card-text">Холст, смешанная техника | 90×90 см | 2023</p>
@@ -322,12 +323,11 @@
             </div>
             <hr class="my-4">
             <div class="text-center">
-                <p class="mb-0">&copy; 2023 Выставка "Be Bold". Все права защищены.</p>
+                <p class="mb-0">&copy; 2025 Выставка "Be Bold". Все права защищены.</p>
             </div>
         </div>
     </footer>
-
-    <!-- Bootstrap JS -->
+ <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         // Изменение навигации при прокрутке
@@ -341,3 +341,4 @@
     </script>
 </body>
 </html>
+   
