--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         }
         
         .artist-img {
-            border-radius: 50%;
+            <!-- border-radius: 50%;
+            -->
             width: 250px;
             height: 250px;
             object-fit: cover;
